--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,33 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 10px;
+  background: #111111ff;
+}
 a {
   text-decoration: none;
+  color: #ccccccff;
+  text-decoration: none;
+  cursor: pointer;
+}
+.active {
   color: #fff;
 }
+
 li {
   list-style: none;
+}
+.container {
+  width: 95%;
+  margin: 0 auto;
+  font-size: 2rem;
+  color: #fff;
+}
+.border-top {
+  border-top-color: #222222ff;
+  border-top-width: 0.0625rem;
+  border-top-style: solid;
 }
