--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,32 +1,60 @@
-div {
-  background: #000;
-  .container {
-    padding: 20px;
-    width: 90%;
-    margin: 0 auto;
-    font-size: 20px;
-    color: #fff;
-    .footer-top {
-      .footer-top-left {
-        a {
-          img {
-            width: 150px;
-            height: 50px;
-          }
-        }
+.footer-top {
+  padding: 3rem 0;
+  .footer-top-left {
+    img,
+    svg {
+      width: 12rem;
+      height: 5rem;
+      .cls-1 {
+        isolation: isolate;
       }
-      .footer-top-right {
-        display: flex;
-        justify-content: inherit;
-        .title {
-          font-size: 20px;
-          font-weight: 500;
-          text-transform: uppercase;
-        }
-        ul > li {
-          line-height: 2.2;
-        }
+
+      .cls-2 {
+        fill: #fff;
       }
+
+      .cls-3 {
+        fill: #0ad418;
+      }
+
+      .cls-4 {
+        fill: url(#radial-gradient);
+      }
+
+      .cls-5 {
+        mix-blend-mode: screen;
+        fill: url(#linear-gradient);
+      }
+    }
+  }
+  .footer-top-right {
+    display: flex;
+    justify-content: flex-end;
+
+    .title {
+      font-size: 2rem;
+      font-weight: 500;
+      text-transform: uppercase;
+    }
+    ul > li {
+      line-height: 2.2;
+    }
+  }
+  .footer-top-right :first-child {
+    margin-right: 3rem;
+  }
+}
+.footer-bottom {
+  padding: 2rem 0.5rem;
+  .footer-bottom-right {
+    display: flex;
+    justify-content: flex-end;
+    .MaQR {
+      margin-right: 2rem;
+    }
+    .app {
+      display: flex;
+      justify-content: space-between;
     }
   }
 }
