--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -86,6 +86,7 @@ header {
 
       .package-sign {
         margin-right: 1rem;
+        position: relative;
         Button {
           border-radius: 0.5rem;
           border: none;
@@ -93,9 +94,22 @@ header {
           font-size: 1.5rem;
           background: linear-gradient(90deg, #da9e1c 0, #ecbd57 100%);
         }
+        .ant-btn-default {
+          color: #000;
+          &:hover {
+            color: #000 !important;
+            background: linear-gradient(
+              90deg,
+              #da9e1c 0,
+              #da9e1c 100%
+            ) !important;
+            border: none !important;
+          }
+        }
       }
       .insert-code {
         margin-right: 1rem;
+        position: relative;
         Button {
           border: none;
           background: transparent;
@@ -103,20 +117,28 @@ header {
           font-weight: 600;
           font-size: 1.5rem;
         }
+        .ant-btn-default {
+          &:hover {
+            color: #9b9b9bff;
+          }
+        }
       }
       .menu {
         .menu_item {
-          Button {
-            background: transparent;
-            border: none;
-            color: #fff;
-            font-size: 2rem;
+          .ant-btn-default {
+            &:hover {
+              color: #9b9b9bff;
+            }
           }
+        }
+        > :not(:last-child) {
+          margin-right: 1.5rem;
         }
       }
     }
   }
 }
+
 .menu_item {
   display: inline-flex;
   height: 100%;
@@ -140,10 +162,40 @@ header {
       height: 100%;
     }
   }
-
+  .icon {
+    height: 60%;
+    display: inline-flex;
+    font-size: 2.25rem;
+  }
   .menu-sub {
     position: absolute;
     top: calc(100% + 1.075rem);
     white-space: nowrap;
+  }
+}
+.ant-popover {
+  --antd-arrow-background-color: none;
+}
+.ant-popover-inner {
+  border: 1px solid #222222ff;
+  background-color: #000 !important;
+
+  .ant-popover-title {
+    color: #fff;
+    margin-bottom: 0;
+    text-align: center;
+    font-size: 1.6rem;
+  }
+  .ant-popover-inner-content {
+    color: #fff;
+  }
+}
+.pane_item {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding: 0.5rem 0;
+  span {
+    margin-left: 1rem;
   }
 }
